[gd_scene load_steps=28 format=3 uid="uid://d3sfhy11bng7b"]

[ext_resource type="Script" uid="uid://bag8lclxqxnf4" path="res://PlayableScenes/LevelSelect/level.gd" id="1_6yoru"]
[ext_resource type="Script" uid="uid://cl0qycakmt6rh" path="res://PlayableScenes/LevelSelect/level_select.gd" id="1_mcag0"]
[ext_resource type="Script" uid="uid://csjccrhj5wnx7" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_3d.gd" id="1_yb21p"]
[ext_resource type="Script" uid="uid://8umksf8e80fw" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="2_kjm5f"]
[ext_resource type="Script" uid="uid://bd046eokvcnu2" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="3_6yoru"]
[ext_resource type="Script" uid="uid://bc07one7kq266" path="res://PlayableScenes/LevelSelect/player.gd" id="3_cj68k"]
[ext_resource type="PackedScene" uid="uid://cur82cwbs4pcp" path="res://Player/Model/Player.glb" id="4_kjm5f"]
[ext_resource type="PackedScene" uid="uid://cul4snk3hnjeh" path="res://Environment/models/grass/custom_colored_grass.tscn" id="8_wmfpg"]
[ext_resource type="PackedScene" uid="uid://cddor7bdb3r1j" path="res://Environment/models/rocks/rock_2.tscn" id="9_hnipo"]
[ext_resource type="PackedScene" uid="uid://2meph8vbsqxs" path="res://Environment/models/rocks/rock_1.tscn" id="10_65v6v"]
[ext_resource type="PackedScene" uid="uid://comhbig4saahp" path="res://Environment/models/rocks/rock_3.tscn" id="11_cavmy"]

[sub_resource type="PlaneMesh" id="PlaneMesh_mcag0"]
size = Vector2(800, 800)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_cj68k"]
data = PackedVector3Array(400, 0, 400, -400, 0, 400, 400, 0, -400, -400, 0, 400, -400, 0, -400, 400, 0, -400)

[sub_resource type="BoxMesh" id="BoxMesh_yurqr"]
size = Vector3(3, 1, 3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wmfpg"]
shading_mode = 0
albedo_color = Color(1, 1, 0.529412, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_cj68k"]
radius = 2.5

[sub_resource type="LabelSettings" id="LabelSettings_6yoru"]
font_size = 32
font_color = Color(0, 0, 0, 1)
outline_size = 16

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_hnipo"]
sky_top_color = Color(0.787018, 0.601241, 0.631682, 1)
sky_horizon_color = Color(0.913725, 0.545098, 0.447059, 1)
sky_curve = 0.599999
ground_bottom_color = Color(0.0938589, 0.0735825, 0.371181, 1)
ground_horizon_color = Color(0.913725, 0.545098, 0.447059, 1)
sun_angle_max = 8.0
sun_curve = 5.32593

[sub_resource type="Sky" id="Sky_uh013"]
sky_material = SubResource("ProceduralSkyMaterial_hnipo")

[sub_resource type="Environment" id="Environment_65v6v"]
background_mode = 2
sky = SubResource("Sky_uh013")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6yoru"]
shading_mode = 0
albedo_color = Color(1, 0.447059, 0.32549, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cj68k"]
shading_mode = 0
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mcag0"]
shading_mode = 0

[sub_resource type="Resource" id="Resource_cj68k"]
script = ExtResource("2_kjm5f")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kjm5f"]
radius = 0.911569
height = 1.86548

[sub_resource type="BoxShape3D" id="BoxShape3D_65v6v"]
size = Vector3(800, 100, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_cavmy"]
size = Vector3(1, 100, 65)

[node name="LevelSelect" type="Node3D" node_paths=PackedStringArray("playerCamera")]
script = ExtResource("1_mcag0")
playerCamera = NodePath("CharacterBody3D/Player/PhantomCamera3D")

[node name="Floor" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_mcag0")

[node name="StaticBody3D" type="StaticBody3D" parent="Floor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_cj68k")

[node name="Level1" type="MeshInstance3D" parent="Floor" node_paths=PackedStringArray("level_select_owner", "level_label")]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, -31, 0, 3)
mesh = SubResource("BoxMesh_yurqr")
surface_material_override/0 = SubResource("StandardMaterial3D_wmfpg")
script = ExtResource("1_6yoru")
level_select_owner = NodePath("../..")
level_scene = "res://PlayableScenes/LevelSelect/Level 1/level_1.tscn"
level_label = NodePath("LevelLabel")

[node name="Area3D" type="Area3D" parent="Floor/Level1"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor/Level1/Area3D"]
shape = SubResource("SphereShape3D_cj68k")

[node name="LevelLabel" type="Label" parent="Floor/Level1"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.0
offset_right = 41.0
offset_bottom = 75.0
grow_horizontal = 2
text = "
Level 1
The Forest
"
label_settings = SubResource("LabelSettings_6yoru")
horizontal_alignment = 1

[node name="Level2" type="MeshInstance3D" parent="Floor" node_paths=PackedStringArray("level_select_owner", "level_label")]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, -15, 0, -6)
mesh = SubResource("BoxMesh_yurqr")
surface_material_override/0 = SubResource("StandardMaterial3D_wmfpg")
script = ExtResource("1_6yoru")
level_select_owner = NodePath("../..")
level_label = NodePath("LevelLabel")

[node name="Area3D" type="Area3D" parent="Floor/Level2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor/Level2/Area3D"]
shape = SubResource("SphereShape3D_cj68k")

[node name="LevelLabel" type="Label" parent="Floor/Level2"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.0
offset_right = 41.0
offset_bottom = 75.0
grow_horizontal = 2
text = "
Level 2
The Outskirts
"
label_settings = SubResource("LabelSettings_6yoru")
horizontal_alignment = 1

[node name="Level3" type="MeshInstance3D" parent="Floor" node_paths=PackedStringArray("level_select_owner", "level_label")]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 2, 0, 0)
mesh = SubResource("BoxMesh_yurqr")
surface_material_override/0 = SubResource("StandardMaterial3D_wmfpg")
script = ExtResource("1_6yoru")
level_select_owner = NodePath("../..")
level_label = NodePath("LevelLabel")

[node name="Area3D" type="Area3D" parent="Floor/Level3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor/Level3/Area3D"]
shape = SubResource("SphereShape3D_cj68k")

[node name="LevelLabel" type="Label" parent="Floor/Level3"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.0
offset_right = 41.0
offset_bottom = 75.0
grow_horizontal = 2
text = "
Level 3
The Mountains
"
label_settings = SubResource("LabelSettings_6yoru")
horizontal_alignment = 1

[node name="Level4" type="MeshInstance3D" parent="Floor" node_paths=PackedStringArray("level_select_owner", "level_label")]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 21, 0, -5)
mesh = SubResource("BoxMesh_yurqr")
surface_material_override/0 = SubResource("StandardMaterial3D_wmfpg")
script = ExtResource("1_6yoru")
level_select_owner = NodePath("../..")
level_label = NodePath("LevelLabel")

[node name="Area3D" type="Area3D" parent="Floor/Level4"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor/Level4/Area3D"]
shape = SubResource("SphereShape3D_cj68k")

[node name="LevelLabel" type="Label" parent="Floor/Level4"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.0
offset_right = 41.0
offset_bottom = 75.0
grow_horizontal = 2
text = "
Level 3
The Ruins
"
label_settings = SubResource("LabelSettings_6yoru")
horizontal_alignment = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_65v6v")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433017, 0.250001, -0.452451, 0.891488, -0.0232146, -0.21282, -0.133218, -0.967967, 0, 0, 0)
light_color = Color(1, 0.721569, 0.160784, 1)
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
physics_interpolation_mode = 1
transform = Transform3D(1, -1.4924e-07, -6.18172e-08, 1.4924e-07, 0.707106, 0.707106, -6.18173e-08, -0.707106, 0.707106, -31, 13, 13)

[node name="PhantomCameraHost" type="Node" parent="Camera3D"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("3_6yoru")
metadata/_custom_type_script = "uid://bd046eokvcnu2"

[node name="CharacterBody3D" type="CharacterBody3D" parent="." groups=["player"]]
transform = Transform3D(-4.37114e-08, 2.77668e-16, 1, 1, -4.37114e-08, 4.37114e-08, 4.37114e-08, 1, 1.02251e-15, -31, 2, 3)
script = ExtResource("3_cj68k")

[node name="Player" parent="CharacterBody3D" instance=ExtResource("4_kjm5f")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0)

[node name="Sphere" parent="CharacterBody3D/Player" index="0"]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, -1, -4.37114e-08, -4.37114e-08, -4.37114e-08, 4.37114e-08, 1, 0, 0, 0)
surface_material_override/0 = SubResource("StandardMaterial3D_6yoru")
surface_material_override/1 = SubResource("StandardMaterial3D_cj68k")
surface_material_override/2 = SubResource("StandardMaterial3D_mcag0")

[node name="PhantomCamera3D" type="Node3D" parent="CharacterBody3D/Player"]
transform = Transform3D(1.31911e-07, 0.883883, 0.883883, -7.72716e-08, -0.883883, 0.883883, 1.25, -1.47914e-07, -3.86358e-08, 13.75, 12.5, 0)
script = ExtResource("1_yb21p")
tween_resource = SubResource("Resource_cj68k")
metadata/_custom_type_script = "uid://csjccrhj5wnx7"

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D"]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, -1, -4.37114e-08, -4.37114e-08, -4.37114e-08, 4.37114e-08, 1, 0, 0, 0)
shape = SubResource("CapsuleShape3D_kjm5f")

[node name="GrassGroup" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.293, 0)

[node name="Grass" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -38.4692, 0.0769644, 7.60968)

[node name="Grass2" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -37.4931, 0.0769644, 12.8488)

[node name="Grass3" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(0.969608, 0, 0.244664, 0, 1, 0, -0.244664, 0, 0.969608, -44.2025, 0.0769644, 9.66103)

[node name="Grass4" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(0.969608, 0, 0.244664, 0, 1, 0, -0.244664, 0, 0.969608, -41.9742, 0.0769644, 14.5021)

[node name="Grass5" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(0.765337, 0, 0.643629, 0, 1, 0, -0.643629, 0, 0.765337, -47.4601, 0.0769644, 16.487)

[node name="Grass6" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(0.765337, 0, 0.643629, 0, 1, 0, -0.643629, 0, 0.765337, -43.341, 0.0769644, 19.8685)

[node name="Grass7" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -32.6077, 0.0769644, 16.0857)

[node name="Grass8" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31.6315, 0.0769644, 21.3249)

[node name="Grass9" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(0.969608, 0, 0.244664, 0, 1, 0, -0.244664, 0, 0.969608, -38.3409, 0.0769644, 18.1371)

[node name="Grass10" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(0.969608, 0, 0.244664, 0, 1, 0, -0.244664, 0, 0.969608, -36.1126, 0.0769644, 22.9782)

[node name="Grass11" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(0.765337, 0, 0.643629, 0, 1, 0, -0.643629, 0, 0.765337, -41.5986, 0.0769644, 24.9631)

[node name="Grass12" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(0.765337, 0, 0.643629, 0, 1, 0, -0.643629, 0, 0.765337, -37.4794, 0.0769644, 28.3445)

[node name="Grass13" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -55.6425, 0.0769644, -2.01936)

[node name="Grass14" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -54.6664, 0.0769644, 3.21981)

[node name="Grass15" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(0.969608, 0, 0.244664, 0, 1, 0, -0.244664, 0, 0.969608, -61.3757, 0.0769644, 0.0319891)

[node name="Grass16" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(0.969608, 0, 0.244664, 0, 1, 0, -0.244664, 0, 0.969608, -59.1475, 0.0769644, 4.87311)

[node name="Grass17" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(0.765337, 0, 0.643629, 0, 1, 0, -0.643629, 0, 0.765337, -64.6334, 0.0769644, 6.85796)

[node name="Grass18" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(0.765337, 0, 0.643629, 0, 1, 0, -0.643629, 0, 0.765337, -60.5142, 0.0769644, 10.2394)

[node name="Grass19" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -49.7809, 0.0769644, 6.4567)

[node name="Grass20" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -48.8048, 0.0769644, 11.6959)

[node name="Grass21" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(0.969608, 0, 0.244664, 0, 1, 0, -0.244664, 0, 0.969608, -55.5142, 0.0769644, 8.50805)

[node name="Grass22" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(0.969608, 0, 0.244664, 0, 1, 0, -0.244664, 0, 0.969608, -53.2859, 0.0769644, 13.3492)

[node name="Grass23" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(0.765337, 0, 0.643629, 0, 1, 0, -0.643629, 0, 0.765337, -58.7718, 0.0769644, 15.334)

[node name="Grass24" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(0.765337, 0, 0.643629, 0, 1, 0, -0.643629, 0, 0.765337, -54.6527, 0.0769644, 18.7155)

[node name="Grass25" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -28.5025, 0.0769644, -3.73699)

[node name="Grass26" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -33.7417, 0.0769644, -2.76088)

[node name="Grass27" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(0.244664, 0, -0.969608, 0, 1, 0, 0.969608, 0, 0.244664, -30.5539, 0.0769644, -9.47026)

[node name="Grass28" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(0.244664, 0, -0.969608, 0, 1, 0, 0.969608, 0, 0.244664, -35.395, 0.0769644, -7.24198)

[node name="Grass29" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(0.643629, 0, -0.765337, 0, 1, 0, 0.765337, 0, 0.643629, -37.3798, 0.0769644, -12.7279)

[node name="Grass30" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(0.643629, 0, -0.765337, 0, 1, 0, 0.765337, 0, 0.643629, -40.7613, 0.0769644, -8.60877)

[node name="Grass31" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -36.9786, 0.0769644, 2.12458)

[node name="Grass32" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -42.2177, 0.0769644, 3.10069)

[node name="Grass33" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(0.244664, 0, -0.969608, 0, 1, 0, 0.969608, 0, 0.244664, -39.0299, 0.0769644, -3.60869)

[node name="Grass34" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(0.244664, 0, -0.969608, 0, 1, 0, 0.969608, 0, 0.244664, -43.871, 0.0769644, -1.3804)

[node name="Grass35" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(0.643629, 0, -0.765337, 0, 1, 0, 0.765337, 0, 0.643629, -45.8559, 0.0769644, -6.86633)

[node name="Grass36" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(0.643629, 0, -0.765337, 0, 1, 0, 0.765337, 0, 0.643629, -49.2374, 0.0769644, -2.74719)

[node name="Grass37" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -18.8735, 0.0769644, -20.9102)

[node name="Grass38" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -24.1126, 0.0769644, -19.9341)

[node name="Grass39" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(0.244664, 0, -0.969608, 0, 1, 0, 0.969608, 0, 0.244664, -20.9248, 0.0769644, -26.6435)

[node name="Grass40" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(0.244664, 0, -0.969608, 0, 1, 0, 0.969608, 0, 0.244664, -25.7659, 0.0769644, -24.4152)

[node name="Grass41" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(0.643629, 0, -0.765337, 0, 1, 0, 0.765337, 0, 0.643629, -27.7508, 0.0769644, -29.9011)

[node name="Grass42" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(0.643629, 0, -0.765337, 0, 1, 0, 0.765337, 0, 0.643629, -31.1323, 0.0769644, -25.782)

[node name="Grass43" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -27.3495, 0.0769644, -15.0487)

[node name="Grass44" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -32.5887, 0.0769644, -14.0725)

[node name="Grass45" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(0.244664, 0, -0.969608, 0, 1, 0, 0.969608, 0, 0.244664, -29.4009, 0.0769644, -20.7819)

[node name="Grass46" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(0.244664, 0, -0.969608, 0, 1, 0, 0.969608, 0, 0.244664, -34.242, 0.0769644, -18.5536)

[node name="Grass47" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(0.643629, 0, -0.765337, 0, 1, 0, 0.765337, 0, 0.643629, -36.2268, 0.0769644, -24.0396)

[node name="Grass48" parent="GrassGroup" instance=ExtResource("8_wmfpg")]
transform = Transform3D(0.643629, 0, -0.765337, 0, 1, 0, 0.765337, 0, 0.643629, -39.6083, 0.0769644, -19.9204)

[node name="RockGroup" type="Node3D" parent="."]

[node name="Rock2" parent="RockGroup" instance=ExtResource("9_hnipo")]
transform = Transform3D(8, 0, 0, 0, 10, 0, 0, 0, 8, -61.4769, 0.0639962, 28.4511)

[node name="Rock8" parent="RockGroup" instance=ExtResource("9_hnipo")]
transform = Transform3D(7.99046, 0, 0.390519, 0, 10, 0, -0.390519, 0, 7.99046, -74.0941, 0.0639962, 2.63369)

[node name="Rock9" parent="RockGroup" instance=ExtResource("9_hnipo")]
transform = Transform3D(7.98672, 0, -0.460791, 0, 10, 0, 0.460791, 0, 7.98672, -74.4656, 0.0639962, -21.252)

[node name="Rock22" parent="RockGroup" instance=ExtResource("9_hnipo")]
transform = Transform3D(7.99046, 0, 0.390519, 0, 10, 0, -0.390519, 0, 7.99046, 88.9059, 0.0639962, 6.63369)

[node name="Rock23" parent="RockGroup" instance=ExtResource("9_hnipo")]
transform = Transform3D(7.98672, 0, -0.460791, 0, 10, 0, 0.460791, 0, 7.98672, 88.5344, 0.0639962, -17.252)

[node name="Rock10" parent="RockGroup" instance=ExtResource("9_hnipo")]
transform = Transform3D(4.11156, 0, -6.86258, 0, 10, 0, 6.86258, 0, 4.11156, -62.2716, 0.0639962, -44.3827)

[node name="Rock11" parent="RockGroup" instance=ExtResource("9_hnipo")]
transform = Transform3D(-0.0647857, 0, 7.99974, 0, 10, 0, -7.99974, 0, -0.0647857, -33.5066, 0.0639962, -44.7997)

[node name="Rock12" parent="RockGroup" instance=ExtResource("9_hnipo")]
transform = Transform3D(2.00791, 0, 7.74392, 0, 10, 0, -7.74392, 0, 2.00791, -7.50663, 0.0639962, -46.7997)

[node name="Rock13" parent="RockGroup" instance=ExtResource("9_hnipo")]
transform = Transform3D(1.16618, 0, 7.91455, 0, 10, 0, -7.91455, 0, 1.16618, 19.144, 0.0639962, -47.5539)

[node name="Rock14" parent="RockGroup" instance=ExtResource("9_hnipo")]
transform = Transform3D(-7.93098, 0, 1.04864, 0, 10, 0, -1.04864, 0, -7.93098, 45.669, 0.0639962, -48.4339)

[node name="Rock15" parent="RockGroup" instance=ExtResource("9_hnipo")]
transform = Transform3D(-0.622801, 0, -7.97572, 0, 10, 0, 7.97572, 0, -0.622801, 70.8111, 0.0639962, -46.2968)

[node name="Rock16" parent="RockGroup" instance=ExtResource("9_hnipo")]
transform = Transform3D(4.11156, 0, -6.86258, 0, 10, 0, 6.86258, 0, 4.11156, -40.2716, 0.0639962, 36.6173)

[node name="Rock17" parent="RockGroup" instance=ExtResource("9_hnipo")]
transform = Transform3D(-0.0647857, 0, 7.99974, 0, 10, 0, -7.99974, 0, -0.0647857, -11.5066, 0.0639962, 36.2003)

[node name="Rock18" parent="RockGroup" instance=ExtResource("9_hnipo")]
transform = Transform3D(2.00791, 0, 7.74392, 0, 10, 0, -7.74392, 0, 2.00791, 14.4934, 0.0639962, 34.2003)

[node name="Rock19" parent="RockGroup" instance=ExtResource("9_hnipo")]
transform = Transform3D(1.16618, 0, 7.91455, 0, 10, 0, -7.91455, 0, 1.16618, 41.144, 0.0639962, 33.4461)

[node name="Rock20" parent="RockGroup" instance=ExtResource("9_hnipo")]
transform = Transform3D(-7.93098, 0, 1.04864, 0, 10, 0, -1.04864, 0, -7.93098, 67.669, 0.0639962, 32.5661)

[node name="Rock21" parent="RockGroup" instance=ExtResource("9_hnipo")]
transform = Transform3D(-0.622801, 0, -7.97572, 0, 10, 0, 7.97572, 0, -0.622801, 92.8111, 0.0639962, 34.7032)

[node name="Rock1" parent="RockGroup" instance=ExtResource("10_65v6v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -35.2965, 0.064, 8.98292)

[node name="Rock3" parent="RockGroup" instance=ExtResource("9_hnipo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -27.9317, 0.064, 11.3573)

[node name="Rock4" parent="RockGroup" instance=ExtResource("11_cavmy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -26, 0, 9)

[node name="Rock5" parent="RockGroup" instance=ExtResource("10_65v6v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -34.8958, 0.064, 18.0042)

[node name="Rock6" parent="RockGroup" instance=ExtResource("9_hnipo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -34.3454, 0.064, 19.4269)

[node name="Rock7" parent="RockGroup" instance=ExtResource("11_cavmy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -32.4137, 0, 17.0696)

[node name="BottomWall" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 29.3445)

[node name="CollisionShape3D" type="CollisionShape3D" parent="BottomWall"]
shape = SubResource("BoxShape3D_65v6v")

[node name="LeftWall" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -36.1676)

[node name="CollisionShape3D" type="CollisionShape3D" parent="LeftWall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -62, 0, 33)
shape = SubResource("BoxShape3D_cavmy")

[node name="RightWall" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 211, 0, -36.1676)

[node name="CollisionShape3D" type="CollisionShape3D" parent="RightWall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -62, 0, 33)
shape = SubResource("BoxShape3D_cavmy")

[node name="TopWall" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -36.1676)

[node name="CollisionShape3D" type="CollisionShape3D" parent="TopWall"]
shape = SubResource("BoxShape3D_65v6v")

[connection signal="body_entered" from="Floor/Level1/Area3D" to="Floor/Level1" method="_on_area_entered"]
[connection signal="body_exited" from="Floor/Level1/Area3D" to="Floor/Level1" method="_on_area_exited"]
[connection signal="body_entered" from="Floor/Level2/Area3D" to="Floor/Level2" method="_on_area_entered"]
[connection signal="body_exited" from="Floor/Level2/Area3D" to="Floor/Level2" method="_on_area_exited"]
[connection signal="body_entered" from="Floor/Level3/Area3D" to="Floor/Level3" method="_on_area_entered"]
[connection signal="body_exited" from="Floor/Level3/Area3D" to="Floor/Level3" method="_on_area_exited"]
[connection signal="body_entered" from="Floor/Level4/Area3D" to="Floor/Level4" method="_on_area_entered"]
[connection signal="body_exited" from="Floor/Level4/Area3D" to="Floor/Level4" method="_on_area_exited"]

[editable path="CharacterBody3D/Player"]
